# tags

./: CREDITS  ChangeLog  Makefile  Makefile.am  NOTES.tjn-fc4.txt  README  README.RH3AS.IA64.txt  README.RH3AS.txt  README.fc4  README.ia64  RELEASE  VERSION  configure.in  install_cluster  oscar-base.spec.in
doc/installation/: intro.tex  release-notes.tex  supported.tex
lib/OSCAR/: Configbox.pm  Configurator.pm  Database.pm  Database_generic.pm  DelNode.pm  Env.pm  FileUtils.pm  ImageMgt.pm  MAC.pm  Opkg.pm  OpkgDB.pm  Package.pm  PackageBest.pm  PackageInUn.pm  PackagePath.pm  PackageSmart.pm  SwitcherAPI.pm  SystemSanity.pm  Utils.pm  WizardEnv.pm  oda.pm
lib/Qt/: Selector.pl  SelectorManageSets.pm  SelectorTable.pm  SelectorUtils.pm
oscarsamples/: Makefile.am  mandrake-10.0-i386.rpmlist  redhat-3as-ia64.rpmlist  redhat-3asU2-ia64.rpmlist  redhat-3asU6-x86_64.rpmlist  rhel-5-i386.rpmlist  sample.disk.ide.ext3  sample.disk.scsi.ext3  sample.disk.scsi.ia64.ext3  sample.rpmlist.RH71  sample.rpmlist.ia64  sample.rpmlist.updatesRH72
scripts/: Makefile.am  build_opkg_rpms  build_oscar_rpms  distro-query  fixup_rhel3u6  get-oscar-version.sh  install_prereq  install_server  oda  opd  oscar_wizard  populate_default_package_set  populate_oda_packages_table  post_buildimage  post_rpm_install  server_prep  setup_pxe  ssh_install  start_over  system-sanity  wizard_prep
scripts/cli/: build_oscar_image_cli  main_cli
scripts/system-sanity.d/: network-check.pl
share/prereqs/: Makefile.am  order.txt
testing/: oscar-testing.txt  run_unit_test  test_cluster
(+43 files in other folders)
