# -*- makefile -*-
#
# $Id: Makefile.am,v 1.2.2.3 2002/04/01 16:36:53 naughtont Exp $
#
# This file is part of the OSCAR distribution.
# See the copyright and license notices in the top-level directory.
#

EXTRA_DIST		= \
			sample.disk.ide \
			sample.disk.ide.ext3 \
			sample.disk.scsi \
			sample.disk.scsi.ext3 \
			sample.disk.scsi.ia64 \
			sample.disk.scsi.ia64.ext3 \
			sample.rpmlist \
			sample.rpmlist.ia64 \
			sample.rpmlist.RH71 \
			sample.rpmlist.updatesRH72
